--- a/0618_04_font.html
+++ b/0618_04_font.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-
+    <link rel="stylesheet" href="css/all.css" />
     <style>
       @font-face {
         font-family: notosanskr;
@@ -21,5 +21,6 @@
   </head>
   <body>
     <div class="info">인사말 info</div>
+    <i class="fa-solid fa-house"></i>
   </body>
 </html>
