--- a/서비스경험디자인/청주시인사말/jg.html
+++ b/서비스경험디자인/청주시인사말/jg.html
@@ -15,7 +15,7 @@
       }
       @font-face {
         font-family: aritab;
-        src: url(webfonts/Arita-buriB.otf) format("opentype");
+        src: url(webfonts/Arita-buriB.otf) format("otp");
       }
       @font-face {
         font-family: wantedsansr;
@@ -165,7 +165,6 @@
         <img src="images/cts23726_deco02.png" alt="bg2" />
       </div>
     </div>
-
     <div class="main"></div>
   </body>
 </html>
