--- a/서비스경험디자인/청주시인사말/jg.html
+++ b/서비스경험디자인/청주시인사말/jg.html
@@ -15,7 +15,7 @@
       }
       @font-face {
         font-family: aritab;
-        src: url(webfonts/Arita-buriB.otf) format("otp");
+        src: url(webfonts/Arita-buriB.otf) format("opentype");
       }
       @font-face {
         font-family: wantedsansr;
