--- a/HTML장군/0611_a태그4.html
+++ b/HTML장군/0611_a태그4.html
@@ -13,14 +13,10 @@
         text-decoration: underline;
         cursor: default;
       }
-      /* a:link{color: #000;}
-    a:visited{color: #0f0;}
-    a:hover{color: #0ff;}
-    a:active{color: #ccc;} */
     </style>
   </head>
   <body>
-    <a href="0610_02_a태그.html#one" target="_new">6월10일 h1태그로 이동</a>
-    <a href="0610_02_a태그.html" download>파일다운로드</a>
+    <a href="0610_a태그2.html#one" target="_new">6월10일 h1태그로 이동</a>
+    <a href="0610_a태그2.html" download>파일다운로드</a>
   </body>
 </html>
