--- a/0611_img태그.html
+++ b/0611_img태그.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>img 태그</title>
+    <title>Document</title>
     <style>
       a.link1 {
         color: red;
@@ -15,7 +15,7 @@
         color: green;
       }
       .one {
-        width: 100px !important;
+        width: 100px;
       }
       .two {
         width: 200px;
@@ -41,19 +41,13 @@
     <a href="#" class="link1">link1</a>
     <a href="#" class="link2">link2</a>
     <a href="#" class="link3">link3</a>
-    <img
-      src="images/photo1.jpg"
-      alt="photo"
-      class="one"
-      id="p01"
-      style="width: 200px"
-    />
+    <img src="images/photo1.jpg" alt="photo" class="one" />
     <img src="images/photo2.jpg" alt="photo" class="two" />
     <img src="images/photo3.jpg" alt="photo" class="three" />
     <img src="images/photo4.jpg" alt="photo" class="four" />
     <img src="images/photo5.jpg" alt="photo" class="five" />
     <img src="images/photo6.jpg" alt="photo" class="six" />
-    <a href="http://www.naver.com" target="_blank"
+    <a href="https://www.naver.com/" target="_blank"
       ><img src="images/cake.jpg" alt="cake"
     /></a>
     <img src="images/map.jpg" alt="지도" usemap="#korea" />
@@ -62,13 +56,13 @@
         shape="rect"
         coords="150,260,170,290"
         href="https://www.daejeon.go.kr/"
-        target="_blank"
         alt="대전"
+        target="_blank"
       />
       <area
         shape="circle"
         coords="90,523,30"
-        href="https://www.jejusi.go.kr/index.ac"
+        href="https://www.jeju.go.kr/index.htm"
         alt="제주"
         target="_blank"
       />
