--- a/09_리스트태그1.html
+++ b/09_리스트태그1.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      ol,
+      /* ol,
       ul {
         list-style: none;
-      }
+      } */
+      /* ol 순서가 있는 리스트
+        ul 순서가 없는 리스트
+        li 반드시 ol 또는 ul 태그의 자식요소 */
     </style>
   </head>
   <body>
