--- a/11_div1.html
+++ b/11_div1.html
@@ -12,8 +12,11 @@
         width: 300px;
         height: 300px;
         background-color: aqua;
-        display: inline-block;
+        /* margin: 0 auto; */
+        /* inline 요소여서 적용되지 않음 */
+        /* padding: 50px; */
         text-align: center;
+        display: inline-block;
       }
     </style>
   </head>
