--- a/13_div3.html
+++ b/13_div3.html
@@ -20,6 +20,7 @@
         height: 50px;
         background-color: aqua;
         /* display: inline-block; */
+        /* margin을 적용하기 위해 inline-block 숨김 */
         margin: 0 auto;
       }
     </style>
