--- a/15_선택자2.html
+++ b/15_선택자2.html
@@ -8,7 +8,10 @@
       /* body > p:last-of-type {
         color: red;
       } */
-      body :not(p) {
+      /* body :not(p) {
+        color: red;
+      } */
+      p:only-child {
         color: red;
       }
     </style>
