--- a/15_선택자2.html
+++ b/15_선택자2.html
@@ -22,6 +22,7 @@
       } */
       /* 부모의 유일한 p인 요소를 모두 선택한다 */
       p:nth-last-child(3) {
+        color: red;
       }
     </style>
   </head>
