--- a/17_레이아웃_2.html
+++ b/17_레이아웃_2.html
@@ -18,9 +18,9 @@
         position: absolute;
         right: 0;
       }
+      /* 자식은 부모 안에서 놀기 때문에 right:0 을 주더라도 부모 안에서 논다 */
     </style>
   </head>
-
   <body>
     <div class="parent">
       <div class="child"></div>
