--- a/19_레이아웃4.html
+++ b/19_레이아웃4.html
@@ -23,7 +23,7 @@
         height: 300px;
         left: 500px;
       }
-      .parent div:last-child {
+      .parent div:nth-child(3) {
         background-color: green;
         width: 100px;
         height: 100px;
@@ -31,7 +31,6 @@
       }
     </style>
   </head>
-
   <body>
     <div class="parent">
       <div class="child"></div>
