--- a/21_레이아웃6.html
+++ b/21_레이아웃6.html
@@ -13,6 +13,8 @@
         width: 100%;
         z-index: 1;
       }
+      /* fixed 와 top:0 을 줘서 상단에 고정시켰다. fixed는 상하좌우 좌표와 함께 고정시키는 position이다. */
+      /* z-index 를 추가해 앞에 띄웠다 */
       div:nth-child(2) {
         height: 5000px;
         position: relative;
@@ -20,7 +22,6 @@
       }
     </style>
   </head>
-
   <body>
     <div></div>
     <div>
