--- a/22_레이아웃7.html
+++ b/22_레이아웃7.html
@@ -22,9 +22,9 @@
         position: sticky;
         top: 0;
       }
+      /* sticky 로 끈적끈적하게 고정시킨다. fixed 와 동일하게 고정시킬 위치를 선택한다 */
     </style>
   </head>
-
   <body>
     <div></div>
     <div></div>
