--- a/23_zindex.html
+++ b/23_zindex.html
@@ -19,7 +19,9 @@
         height: 200px;
         background-color: yellow;
         top: -50px;
+        z-index: -1;
       }
+      /* z-index 로 위로 띄우고 아래로 깔아준다 */
       div:nth-child(3) {
         width: 100px;
         height: 100px;
