--- a/26_float3.html
+++ b/26_float3.html
@@ -10,6 +10,20 @@
         background-color: #ccc;
       }
       .parent > div {
+        width: 100px;
+        height: 100px;
+      }
+      .parent > div p:first-child {
+        background-color: red;
+      }
+      .parent > div p:nth-child(2) {
+        background-color: blue;
+      }
+      .parent > div p:nth-child(3) {
+        background-color: yellow;
+      }
+      .top {
+        float: left;
       }
     </style>
   </head>
