--- a/0704_06_bienglo.html
+++ b/0704_06_bienglo.html
@@ -46,6 +46,7 @@
       #wrap .menu > ul > li > a {
         display: block;
         line-height: 100px;
+        white-space: nowrap;
       }
       #wrap .menu .sub {
         height: 0;
@@ -54,13 +55,21 @@
         position: absolute;
         left: 0;
         width: 100%;
+        font-size: 13px;
+        line-height: 30px;
       }
       #wrap .menu > ul:hover .sub {
         height: 300px;
       }
-      #wrap .menu > ul:hover .sub li {
-        line-height: 30px;
-        font-size: 13px;
+      #wrap .right {
+        float: right;
+      }
+      #wrap .right ul {
+        height: 100px;
+      }
+      #wrap .right ul li {
+        float: left;
+        text-align: center;
       }
     </style>
   </head>
@@ -79,7 +88,7 @@
                   <li><a href="#">quarthera</a></li>
                   <li><a href="#">hot & cool glow on</a></li>
                   <li>
-                    <a href="#">hot & cool glow on<br />petite</a>
+                    <a href="#">hot & cool glow on petite</a>
                   </li>
                   <li><a href="#">haute liang</a></li>
                   <li><a href="#">glow boostiong gel</a></li>
@@ -108,9 +117,9 @@
         </div>
         <div class="right">
           <ul>
-            <li>FQA</li>
-            <li>Get in Touch</li>
-            <li></li>
+            <li><a href="#">FQA</a></li>
+            <li><a href="#">Get in Touch ↗</a></li>
+            <li><a href="#">EN</a></li>
           </ul>
         </div>
       </header>
