--- a/0704_06_bienglo.html
+++ b/0704_06_bienglo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css");
       * {
         margin: 0;
         padding: 0;
@@ -14,25 +15,35 @@
       }
       ul li a {
         text-decoration: none;
+        color: #000;
+        font-weight: 500;
+        letter-spacing: -0.5px;
+      }
+      #wrap {
+        font-family: "Pretendard Variable";
       }
       #wrap header {
         height: 100px;
-      }
-      #wrap header .left {
         width: 1700px;
         margin: 0 auto;
+      }
+      #wrap header .left {
+        float: left;
       }
       #wrap .logo {
         float: left;
         width: 126px;
         height: 100px;
-        margin-right: 100px;
+        margin-right: 74px;
       }
       #wrap .logo a {
         line-height: 100px;
       }
       #wrap .logo a img {
         vertical-align: middle;
+      }
+      #wrap .menu {
+        float: left;
       }
       #wrap .menu > ul {
         height: 100px;
@@ -47,82 +58,125 @@
         display: block;
         line-height: 100px;
         white-space: nowrap;
+        text-transform: uppercase;
       }
       #wrap .menu .sub {
         height: 0;
         overflow: hidden;
-        transition: 0.5s;
+        transition: 0.1s;
+        position: absolute;
+        left: 0;
+        top: 80px;
+        width: 100%;
+        z-index: 2;
+      }
+      #wrap .menu > ul .sub li {
+        padding: 8px 0;
+      }
+      #wrap .menu > ul .sub li a {
+        font-size: 14px;
+        color: #999;
+        letter-spacing: -0.04em;
+        line-height: 1.4;
+      }
+      #wrap .menu > ul:hover .sub {
+        height: 250px;
+      }
+      #wrap .menu > ul:hover .sub li {
+        width: 100%;
+      }
+      #wrap .menu > ul:hover .sub li a:hover {
+        text-decoration: underline;
+      }
+      #wrap .menu .bg {
         position: absolute;
         left: 0;
         width: 100%;
-        font-size: 13px;
-        line-height: 30px;
+        height: 0;
+        transition: 0.5s;
+        z-index: 1;
       }
-      #wrap .menu > ul:hover .sub {
-        height: 300px;
+      #wrap .menu > ul:hover ~ .bg {
+        height: 233.16px;
+        background-color: #fff;
       }
       #wrap .right {
         float: right;
       }
-      #wrap .right ul {
-        height: 100px;
-      }
       #wrap .right ul li {
         float: left;
         text-align: center;
+      }
+      #wrap .right ul li a {
+        line-height: 100px;
+        margin-left: 30px;
+      }
+      #wrap .slide {
+        width: 1815px;
+        height: 769px;
+        margin: 0 auto;
+      }
+      #wrap .slide img {
+        border-radius: 8px;
       }
     </style>
   </head>
   <body>
     <div id="wrap">
       <header>
-        <div class="left">
-          <div class="logo">
-            <a href="#"><img src="images/bienglo.svg" alt="logo" /></a>
+        <div>
+          <div class="left">
+            <div class="logo">
+              <a href="#"><img src="images/bienglo.svg" alt="logo" /></a>
+            </div>
+            <div class="menu">
+              <ul>
+                <li>
+                  <a href="#">products</a>
+                  <ul class="sub">
+                    <li><a href="#">Quarthera</a></li>
+                    <li><a href="#">Hot & Cool Glow On</a></li>
+                    <li>
+                      <a href="#">Hot & Cool Glow On Petite</a>
+                    </li>
+                    <li><a href="#">Haute Liang</a></li>
+                    <li><a href="#">Glow Boostiong Gel</a></li>
+                    <li><a href="#">All</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="#">about us</a>
+                  <ul class="sub">
+                    <li><a href="#">Our Story</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="#">articles</a>
+                </li>
+                <li>
+                  <a href="#">support</a>
+                  <ul class="sub">
+                    <li><a href="#">How to Use</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Get in Touch</a></li>
+                  </ul>
+                </li>
+              </ul>
+              <div class="bg"></div>
+            </div>
           </div>
-          <div class="menu">
+          <div class="right">
             <ul>
-              <li>
-                <a href="#">products</a>
-                <ul class="sub">
-                  <li><a href="#">quarthera</a></li>
-                  <li><a href="#">hot & cool glow on</a></li>
-                  <li>
-                    <a href="#">hot & cool glow on petite</a>
-                  </li>
-                  <li><a href="#">haute liang</a></li>
-                  <li><a href="#">glow boostiong gel</a></li>
-                  <li><a href="#">all</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#">about us</a>
-                <ul class="sub">
-                  <li><a href="#">our story</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#">articles</a>
-              </li>
-              <li>
-                <a href="#">support</a>
-                <ul class="sub">
-                  <li><a href="#">how to use</a></li>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">get in touch</a></li>
-                </ul>
-              </li>
+              <li><a href="#">FQA</a></li>
+              <li><a href="#">Get in Touch ↗</a></li>
+              <li><a href="#">EN</a></li>
             </ul>
           </div>
         </div>
-        <div class="right">
-          <ul>
-            <li><a href="#">FQA</a></li>
-            <li><a href="#">Get in Touch ↗</a></li>
-            <li><a href="#">EN</a></li>
-          </ul>
-        </div>
       </header>
+      <div class="slide">
+        <a href="#"><img src="images/bienglomain.jpg" alt="slide01" /></a>
+      </div>
     </div>
   </body>
 </html>
