--- a/27_float4.html
+++ b/27_float4.html
@@ -1,9 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .parent {
+        width: 1200px;
+        margin: 0 auto;
+        border: 1px solid #000;
+        overflow: hidden;
+      }
+      .one {
+        width: 100%;
+        overflow: hidden;
+      }
+      .one > div {
+        float: left;
+      }
+      .one > div:nth-child(1) {
+        width: 20%;
+        background-color: red;
+      }
+      .one > div:nth-child(2) {
+        width: 60%;
+        background-color: blue;
+      }
+      .one > div:nth-child(3) {
+        width: 20%;
+        background-color: yellow;
+      }
+      .two {
+        background-color: green;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div class="parent">
+      <div class="one">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+      </div>
+      <div class="two">
+        <div>1</div>
+      </div>
+    </div>
+  </body>
 </html>
