--- a/0711_01_kb퀵메뉴.html
+++ b/0711_01_kb퀵메뉴.html
@@ -14,7 +14,7 @@
       }
       a {
         text-decoration: none;
-        color: #000000de;
+        color: #000000;
       }
       .icon {
         width: 1080px;
