--- a/메리츠금융그룹/메리츠금융그룹.html
+++ b/메리츠금융그룹/메리츠금융그룹.html
@@ -13,12 +13,12 @@
   </head>
   <body>
     <div class="wrap">
-      <div class="top">
-        <div class="logo">
-          <p><span></span></p>
-        </div>
-        <nav>
-          <ul>
+      <header>
+        <div class="nav">
+          <div class="logotxt">
+            <p><span>meritz</span>메리츠금융그룹</p>
+          </div>
+          <ul class="menu">
             <li>
               <a href="#"></a>
               <ul>
@@ -56,9 +56,17 @@
               </ul>
             </li>
           </ul>
-        </nav>
-        <div class="hamberger"></div>
-      </div>
+          <div class="hamberger"></div>
+        </div>
+        <div class="lang"></div>
+      </header>
+      <main>
+        <div class="txtwrap"></div>
+        <div class="numwrap"></div>
+      </main>
+      <footer>
+        <div></div>
+      </footer>
     </div>
   </body>
 </html>
