--- a/메리츠금융그룹/메리츠금융그룹.html
+++ b/메리츠금융그룹/메리츠금융그룹.html
@@ -4,68 +4,131 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="메리츠금융그룹.css" />
   </head>
   <body>
     <div class="wrap">
       <header>
-        <div class="nav">
-          <div class="logotxt">
+        <nav>
+          <div class="logoTxt">
             <p><span>meritz</span>메리츠금융그룹</p>
           </div>
-          <ul class="menu">
+          <ul class="dep1">
             <li>
-              <a href="#"></a>
-              <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+              <p><a href="#">그룹소개</a></p>
+              <ul class="dep2">
+                <li>
+                  <a href=""><span>CEO인사말</span></a>
+                </li>
+                <li>
+                  <a href=""><span>메리츠금융그룹</span></a>
+                </li>
+                <li>
+                  <a href=""><span>연혁</span></a>
+                </li>
+                <li>
+                  <a href=""><span>지배구조</span></a>
+                </li>
               </ul>
             </li>
             <li>
-              <a href="#"></a>
-              <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+              <p><a href="#">IR</a></p>
+              <ul class="dep2">
+                <li>
+                  <a href=""><span>자료</span></a>
+                </li>
+                <li>
+                  <a href=""><span>FAQ</span></a>
+                </li>
+                <li>
+                  <a href=""><span>공시</span></a>
+                </li>
+                <li>
+                  <a href=""><span>주주정책</span></a>
+                </li>
+                <li>
+                  <a href=""><span>재무정보</span></a>
+                </li>
+                <li>
+                  <a href=""><span>신용등급</span></a>
+                </li>
               </ul>
             </li>
             <li>
-              <a href="#"></a>
-              <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+              <p><a href="#">PR</a></p>
+              <ul class="dep2">
+                <li>
+                  <a href=""><span>NEWS</span></a>
+                </li>
+                <li>
+                  <a href=""><span>보도자료</span></a>
+                </li>
+                <li>
+                  <a href=""><span>그룹광고</span></a>
+                </li>
+                <li>
+                  <a href=""><span>CI&캐릭터</span></a>
+                </li>
               </ul>
             </li>
             <li>
-              <a href="#"></a>
-              <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+              <p><a href="#">ESG</a></p>
+              <ul class="dep2">
+                <li>
+                  <a href=""><span>ESG전략</span></a>
+                </li>
+                <li>
+                  <a href=""><span>ESG정책</span></a>
+                </li>
+                <li>
+                  <a href=""><span>ESG성과</span></a>
+                </li>
+                <li>
+                  <a href=""><span>윤리경영</span></a>
+                </li>
               </ul>
             </li>
           </ul>
           <div class="hamberger"></div>
+        </nav>
+        <div class="lang">
+          <ul>
+            <li><a href="#">KOR</a></li>
+            <li><a href="#">ENG</a></li>
+          </ul>
         </div>
-        <div class="lang"></div>
       </header>
       <main>
-        <div class="txtwrap"></div>
-        <div class="numwrap"></div>
+        <div class="txtWrap">
+          <p class="tit"></p>
+          <p class="txt"><strong></strong></p>
+          <p class="txt"></p>
+          <a href=""><span></span></a>
+        </div>
+        <div class="numWrap"></div>
       </main>
       <footer>
-        <div></div>
+        <div class="footTop">
+          <div class="footTopTxt">
+            <address></address>
+            <a href=""></a>
+          </div>
+          <div class="family">
+            <a href=""></a>
+          </div>
+        </div>
+        <div class="footBot">
+          <div class="footBotTxt">
+            <ul>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+              <li><a href=""></a></li>
+            </ul>
+          </div>
+          <p class="copyright"></p>
+        </div>
+        <p class="footImg"><img src="" alt="" /></p>
       </footer>
     </div>
   </body>
