--- a/메리츠금융그룹/메리츠금융그룹.html
+++ b/메리츠금융그룹/메리츠금융그룹.html
@@ -10,9 +10,7 @@
     <div class="wrap">
       <header>
         <nav>
-          <div class="logoTxt">
-            <p><span>meritz</span>메리츠금융그룹</p>
-          </div>
+          <div class="logo"></div>
           <ul class="dep1">
             <li>
               <p><a href="#">그룹소개</a></p>
@@ -99,13 +97,13 @@
         </div>
       </header>
       <main>
-        <div class="txtWrap">
-          <p class="tit"></p>
-          <p class="txt"><strong></strong></p>
-          <p class="txt"></p>
+        <div class="mainTxtWrap">
+          <p class="mainTit"></p>
+          <p class="mainTxt"><strong></strong></p>
+          <p class="mainTxt"></p>
           <a href=""><span></span></a>
         </div>
-        <div class="numWrap"></div>
+        <div class="mainNumWrap"></div>
       </main>
       <footer>
         <div class="footTop">
@@ -130,6 +128,21 @@
         </div>
         <p class="footImg"><img src="" alt="" /></p>
       </footer>
+      <div id="popup">
+        <div class="popWindow">
+          <strong></strong>
+          <div class="popuptxt">
+            <h1></h1>
+            <img src="" alt="" />
+            <p></p>
+            <p><a href="">바로가기</a></p>
+            <div class="close">
+              <p><a href="">하루동안 보지않기</a></p>
+              <p><a href="">닫기</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
