--- a/메리츠금융그룹/메리츠금융그룹.html
+++ b/메리츠금융그룹/메리츠금융그룹.html
@@ -10,7 +10,11 @@
     <div class="wrap">
       <header>
         <nav>
-          <div class="logo"></div>
+          <div class="logo">
+            <div class="logoimg">
+              <a href=""></a>
+            </div>
+          </div>
           <ul class="dep1">
             <li>
               <p><a href="#">그룹소개</a></p>
