--- a/0628_03_transition.html
+++ b/0628_03_transition.html
@@ -53,7 +53,7 @@
         /* timing-function을 생략할 경우 기본값이 ease이다 */
       }
       ul li:nth-child(3) {
-        transition-timing-function: ease-in;
+        transition-timing-function: ease-out;
       }
       ul li:nth-child(4) {
         transition-timing-function: ease-out;
