--- a/32_font3.html
+++ b/32_font3.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
       .material-symbols-outlined {
@@ -14,14 +13,13 @@
         margin: 0;
         padding: 0;
       }
-
       .info {
-        font: 100 24px "Noto Sans", "Noto Sans KR", sans-serif;
+        font: 100 24px "noto sans", "noto sans kr", sans-serif;
       }
     </style>
   </head>
   <body>
     <div class="info">인사말 info</div>
-    <span class="material-symbols-outlined"> search </span>
+    <span class="material-symbols-outlined">search</span>
   </body>
 </html>
