--- a/31_font2.html
+++ b/31_font2.html
@@ -13,38 +13,30 @@
         width: 100%;
         margin: 0 auto;
         height: 100vh;
+        /* 뷰포트 높이 비례 */
       }
-      /* .parent {
-        width: 1200px;
-        margin: 0 auto;
-        height: 100%;
-        position: fixed;
-      } */
-      /* .parent {
-        width: 1200px;
-        margin: 0 auto;
-        height: 100%;
-        position: absolute;
-      } */
       .parent > div {
         width: 50%;
         float: left;
         font-weight: bold;
       }
-      .left {
+      .parent .left {
         background-color: yellow;
       }
-      .right {
+      .parent .right {
         background-color: blue;
       }
       h6:nth-of-type(1) {
         text-transform: uppercase;
+        /* 대문자 전환 */
         line-height: 0.5em;
       }
       h6:nth-of-type(2) {
         font-weight: normal;
         font-style: italic;
+        /* 기울이기 */
         font-variant: small-caps;
+        /* 작은 대문자 전환 */
       }
       span {
         /* font: italic small-caps bold 20px/0.5em 돋움, sans-serif; */
@@ -54,8 +46,8 @@
   </head>
   <body>
     <div class="parent">
-      <div class="left">child</div>
-      <div class="right">child</div>
+      <div class="left">chlid</div>
+      <div class="right">chlid</div>
     </div>
     <p>문단태그</p>
     <h6>제목태그abc</h6>
